# telethon-core

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  DATABASE.md  README.md  TODO.md  config.toml  core.py  main.py  pyproject.toml  requirements.txt  skyfallctl
.github/: codeql.yml
.github/workflows/: codeql.yml  publish-test.yml  publish.yml
handlers/: __init__.py  addchat.py  help.py  start.py
scripts/: generate_session.py
src/: core.py  db.py  main.py
src/core/: bot.py  core.py
src/handlers/: help.py  shutdown.py  start.py
src/modules/: addchat.py  help.py  shutdown.py  start.py
src/tlcore/: __init__.py  __main__.py  bot.py  config.py  lifecycle.py  loader.py  logs.py  main.py  process.py  state.py
