[project]
name = "telethon-core"
version = "0.5.2"
description = "A modular Telethon based bot core."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "loguru>=0.7.3",
    "python-dotenv>=1.2.2",
    "telethon>=1.43.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["src/tlcore"]
